Sforce8 Project Data/src/objects/TTend__c.object
<CustomObject>
    <description>*** Account relationship ***
----------------Customer
---------------- |
---------------- |
---------------- V
[Pay Tran] -------&gt;Total Tran&lt;------Item Tran

[ttend.csv] Import
[ttend02.csv] Import</description>
    <fields>
        <fullName>CardTypeLst__c</fullName>
        <label>カード種別</label>
        <picklist>
            <picklistValues>
                <fullName>VISAカード</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JCBカード</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AmericanExpress</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CouponTypeLst__c</fullName>
        <label>金券種別</label>
        <picklist>
            <picklistValues>
                <fullName>全国百貨店共通券</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ＶＩＳＡ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ＪＴＢナイスギフト</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Field10__c</fullName>
        <label>値引／割引種別</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field13__c</fullName>
        <label>対象ＰＬＵコード</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field14__c</fullName>
        <label>値引／割引ステータス</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OutSideAccount__c</fullName>
        <formula>if ( Field35__c = &quot;00&quot; &amp;&amp;  Field4__c = &quot;1&quot; &amp;&amp;  Field5__c =&quot;1&quot; &amp;&amp;  Field1__r.Field40__c  =&quot;&quot; &amp;&amp;  Field29__c  &lt;&gt; 0, 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$集計対象外</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>POSNo__c</fullName>
        <label>POSNo.</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelAccount__c</fullName>
        <label>予約会計</label>
        <referenceTo>RsvAccount__c</referenceTo>
        <relationshipLabel>会計支払</relationshipLabel>
        <relationshipName>PaymentAccountYPMt</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Taishou__c</fullName>
        <formula>if (   OutSideAccount__c  = 1, IMAGE(&quot;/resource/&quot; &amp; $Setup.CommDefine__c.AppNS__c &amp; &quot;A&quot;, &quot;対象&quot;), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>A</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Taxfee__c</fullName>
        <formula>if (  Field4__c  = &quot;2&quot;, 0-VALUE( Field25__c ),VALUE( Field25__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$メディア毎消費税額</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>noneaccount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>集計対象外</label>
        <type>Checkbox</type>
    </fields>
    <label>会計支払</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{000}</displayFormat>
        <label>会計支払TranR#</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>